# cloudcompare_python_plugin

./: README.md  install.ps1  pyproject.toml  uic_rcc.py
qt/: main_window.ui  resource_collection.qrc
src/: __main__.py
src/cloudcompare_python_plugin/: MainWindow.py  Plugin.py  main_window_ui.py  resource_collection_rc.py
